# Planner

./: .env.example  .gitignore  Makefile  README.md  design-notes.md  dev.ps1  docker-compose.yml  start-planner.bat
backend/: alembic.ini  check_curriculum.py  check_today.py  pyproject.toml  reset_112day_plan.py  reset_14day_plan.py  send_today_telegram.py  send_tomorrow_classes.py  smoke_test.py
backend/alembic/: env.py
backend/alembic/versions/: 7b86edec7cba_add_fcm_token_and_notification_emails.py  e4fe59ba4d94_initial.py
backend/app/: config.py  database.py  main.py
backend/app/agent/: __init__.py
backend/app/api/: auth.py  deps.py  health.py  milestones.py  tasks.py  timetable.py
backend/app/integrations/: __init__.py  ms_graph.py  telegram.py  whatsapp.py
backend/app/jobs/: backlog_alert.py  class_reminder.py  daily_rollover.py  morning_brief.py  nightly_schedule.py  scheduler.py  startup_catchup.py
backend/app/models/: __init__.py  class_slot.py  contact.py  finance.py  milestone.py  notification.py  task.py  user.py
backend/app/schemas/: __init__.py  task.py  user.py
backend/app/services/: email_service.py  morning_brief.py  notification_service.py  task_service.py
backend/seeds/: private_roadmap_v2.py  seed_data.py
backend/tests/: conftest.py  test_morning_brief.py  test_rollover.py  test_task_crud.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/assets/: roadmap-diagram.md
frontend/src/components/: AgingIndicator.tsx  (+4 more)
(+8 files in other folders)
